k8_configurations/sentimentAnalysis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentimentAnalysisApp-deployment
  labels:
    app: sentimentAnalysisApp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sentimentAnalysisApp
  template:
    metadata:
      labels:
        app: sentimentAnalysisApp
    spec:
      containers:
        - name: sentimentAnalysisApp
          image: django-sentiment-app
          ports:
            - containerPort: 3000
