k8_configurations/deployment-sentimentAnalysis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-analysis-app-deployment
  labels:
    app: sentiment-analysis-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentiment-analysis-app
  template:
    metadata:
      labels:
        app: sentiment-analysis-app
    spec:
      containers:
        - name: sentiment-analysis-app
          image: django-sentiment-app:1.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: sentiment-analysis-app-service
spec:
  selector:
    app: sentiment-analysis-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8000
