k8_configurations/ingress-sentimentAnalysis.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  rules:
    - host: sentimentanalysis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentiment-analysis-app-service
                port:
                  number: 3000
